# foreninglet-data

./: .gitignore  README.md  ci.sh  dagger-ci.py  dagger.json  pyproject.toml
.github/workflows/: build-release.yaml  dagger-ci.yaml  main-lint-test.yaml  manual-release.yml  release.yaml  tag_release.yml
foreninglet_data/: .gitignore  activities.py  api.py  fl_types.py  memberlist.py
foreninglet_data/models/: activities_model.py  member_model.py
releasenotes/: 0.2.3.md  0.3.3.md  0.4.0.md  0.5.0.md  0.5.2.md
tests/: conftest.py  mock_activity.py  mock_member.py  test_activities.py  test_api_call.py  test_fl_dataclass.py  test_memberlist.py  test_resigned_memberlist.py  test_utils.py
tests/cassettes/: fl_api_get_resigned_members.yaml  test_api_call_succeed.yaml  test_data_fl_api_activities_anon.yaml  test_data_fl_api_get_anon.yaml  test_get_memberlist.yaml
tests/utils/: README.md  anonymize_fl_activity_data.py  anonymize_fl_api_data.py
