[project]
name = "foreninglet-data"
version = "0.5.0"
description = "A way to retrieve information about members from the ForeningLet API (www.foreninglet.dk) - ForeningLet is a member system for small (typically) voluntary organizations in Denmark"
authors = [
    {name = "Carsten Skov", email = "carsten@simcax.dk"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "dataclasses-json>=0.5.7,<0.7.0",
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "loguru>=0.7.2",
    "pydantic>=2.6.4",
    "retry>=0.9.2",
    "dagger-io>=0.19.8",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "python-dotenv==1.2.1",
    "dagger-io>=0.19.8",
    "faker>=19.2,<39.0",
    "typer>=0.9,<0.21",
    "sphinx>=7.2.6",
    "pytest-cov>=4.1,<8.0",
    "pytest>=8.0.0",
    "pytest-vcr>=1.0.2",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["foreninglet_data*"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "faker>=24.14.1",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "pytest-vcr>=1.0.2",
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
]
